added review in admin and perfromed some bug fixes in dashboard